--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="english">English</string>
     <string name="logout">Log Out</string>
     <string name="loginfirs">Please Login First</string>
+    <string name="featureproduct">Feature Products</string>
 </resources>
 
 
